--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     
+    <h1>Generatore Password</h1>
+
+    <h3>Nome</h3><span id="myName"></span>
+    <h3>Cognome</h3><span id="lastName"></span>
+    <h3>Colore preferito</h3><span id="favCol"></span>
+
+    <h5>Password generata:</h5><span id="pwGen"></span>
 
 
     <!-- collegamento js  -->
